--- a/src/sources.cfg
+++ b/src/sources.cfg
@@ -1,3 +1,7 @@
 syntax.bel
-normWithCtype.bel
-determinacy.bel
+equality.bel
+norm_comp_ec.bel
+path.bel
+hr_diamond.bel
+%determinacy.bel
+%logical_relations.bel
