--- a/src/sources.cfg
+++ b/src/sources.cfg
@@ -1,7 +1,6 @@
 syntax.bel
 equality.bel
-norm_comp_ec.bel
-path.bel
-hr_diamond.bel
-%determinacy.bel
-%logical_relations.bel
+evaluation.bel
+diamond.bel
+determinacy.bel
+logical_relations.bel
