Started overhaul of the mechanization (had a problem with contexts)

--- a/src/sources.cfg
+++ b/src/sources.cfg
@@ -1,6 +1,8 @@
 syntax.bel
-equality.bel
-evaluation.bel
-diamond.bel
-determinacy.bel
-logical_relations.bel
+subderivations.bel
+principal_typing.bel
+%equality.bel
+%evaluation.bel
+%diamond.bel
+%determinacy.bel
+%logical_relations.bel
